# opengl-practice

./: .clang-format  .gitignore  CMakeLists.txt
libs/glad/glad/: glad.h
libs/glad/src/: glad.c
src/: initialize.cpp  initialize.h  main.cpp  read-file.cpp  read-file.h  read-shader-file.cpp
src/examples/: 01-hello-world.cpp  01-hello-world.h  02-element-buffer-object.cpp  02-element-buffer-object.h  03-draw-two-triangles.cpp  03-draw-two-triangles.h  04-using-multiple-vao-and-vbo.cpp  04-using-multiple-vao-and-vbo.h  context.h  example.h  examples.cpp  examples.h  includes.h  type.h
src/examples/01-hello-world/: main.cpp  main.h
src/examples/02-element-buffer-object/: main.cpp  main.h
src/examples/03-draw-two-triangles/: main.cpp  main.h
src/examples/04-using-multiple-vao-and-vbo/: main.cpp  main.h
src/examples/05-using-multiple-shaders/: fragment-shader-1.frag  fragment-shader-2.frag  main.cpp  main.h
src/examples/06-pass-data-between-shaders/: main.cpp  main.h  vertex-shader.vert
src/examples/07-pass-data-using-vertex-attributes/: main.cpp  main.h  vertex-shader.vert
src/examples/08-pass-data-using-uniforms/: fragment-shader.frag  main.cpp  main.h  vertex-shader.vert
src/examples/09-using-texture/: fragment-shader.frag  main.cpp  main.h
src/examples/10-using-multiple-textures/: fragment-shader.frag  main.cpp  main.h  vertex-shader.vert
src/examples/11-transformation/: main.cpp  main.h  vertex-shader.vert
src/examples/12-coordinate-system/: fragment-shader.frag  main.cpp  main.h  vertex-shader.vert
src/examples/13-3d-cube/: fragment-shader.frag  main.cpp  main.h
src/examples/14-multiple-3d-cubes/: main.cpp  main.h
src/examples/15-camera-look-at-matrix/: main.cpp  main.h
src/examples/16-camera-control/: main.cpp  main.h
src/examples/17-light-scene/: fragment-shader.frag  light-shader.frag  main.cpp  main.h  vertex-shader.vert
src/examples/18-moving-light-source/: fragment-shader.frag  main.cpp  main.h
src/examples/19-material/: fragment-shader.frag  main.cpp  main.h
src/examples/20-different-materials/: main.cpp  main.h
src/examples/21-light-maps/: fragment-shader.frag  main.cpp  main.h  vertex-shader.vert
src/examples/22-directional-light/: fragment-shader.frag  main.cpp  main.h
src/examples/23-point-light/: fragment-shader.frag  main.cpp  main.h  vertex-shader.vert
src/examples/24-spot-light/: fragment-shader.frag  main.cpp  main.h
src/examples/25-loading-model-using-assimp/: fragment-shader.frag  main.cpp  main.h  vertex-shader.vert
src/examples/26-depth-test/: fragment-shader.frag  main.cpp  main.h
src/examples/27-stencil-test/: main.cpp  main.h
src/examples/28-discarding-fragment/: fragment-shader.frag  main.cpp  main.h
src/examples/29-blending/: fragment-shader.frag  main.cpp  main.h  vertex-shader.vert
src/examples/30-face-culling/: main.cpp  main.h
src/examples/31-frame-buffer/: frame-buffer-fragment-shader.frag  main.cpp  main.h
src/examples/32-postprocessing/: frame-buffer-fragment-shader.frag  frame-buffer-vertex-shader.vert  main.cpp  main.h
src/examples/33-kernel-effects/: frame-buffer-fragment-shader.frag  main.cpp  main.h
src/examples/34-create-skybox-using-cubemap/: fragment-shader.frag  main.cpp  main.h  skybox-fragment-shader.frag  skybox-vertex-shader.vert  vertex-shader.vert
src/examples/35-environment-mapping/: fragment-shader.frag  main.cpp  main.h  skybox-fragment-shader.frag  skybox-vertex-shader.vert  vertex-shader.vert
src/examples/36-geometry-shader/: main.cpp  main.h  (+3 more)
src/helpers/: close-window-on-esc-pressed.cpp  close-window-on-esc-pressed.h  cube.cpp  cube.h  gui.cpp  gui.h  material.h  mesh.cpp  mesh.h  model.cpp  model.h  mouse-move-event.cpp  mouse-move-event.h  perspective-camera.h  plane.cpp  plane.h  read-file.cpp  read-file.h  read-shader-file.cpp  read-shader-file.h  shader-program.cpp  shader-program.h  switch-example-on-arrow-key-pressed.cpp  switch-example-on-arrow-key-pressed.h  texture-2d.h  toggle-polygon-mode-on-key-pressed.cpp  toggle-polygon-mode-on-key-pressed.h
(+17 files in other folders)
